# handspring-grpc

./: Cargo.toml  README.md
hs-grpc-shared/: Cargo.toml  build.rs
hs-grpc-shared/src/: lib.rs
img-clip-vit-b-32-service/: Cargo.toml
img-clip-vit-b-32-service/src/: main.rs
img-embeddings-client/: Cargo.toml  build.rs
img-embeddings-client/src/: main.rs
protos/: embeddings.proto  tensor.proto
